code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_12.wast
(assert_invalid
  (module
    (type (func))
    (func $no-table (call_indirect (type 0) (i32.const 0)))
  )
  "unknown table"
)